# -AI-Powered-Legal-Document-Analyzer

./: .gitignore  QWEN.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: deps.py
backend/api/routes/: analysis.py  compare.py  documents.py  export.py  query.py  sessions.py
backend/core/: embeddings.py  ingestion.py  llm.py  prompts.py  retriever.py  vectorstore.py
backend/db/: crud.py  database.py
backend/models/: __init__.py  clause.py  comparison.py  document.py  risk.py  session.py
backend/services/: analysis_service.py  compare_service.py  document_service.py  export_service.py  query_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/[id]/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/export/: page.tsx
frontend/app/history/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/analysis/: ClausePanel.tsx  RiskPanel.tsx  SummaryPanel.tsx
frontend/components/compare/: DiffViewer.tsx
frontend/components/documents/: DocumentCard.tsx  UploadZone.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/query/: ChatHistory.tsx  QueryInput.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Modal.tsx  Spinner.tsx
frontend/lib/: api.ts  types.ts  utils.ts
